# audio-capture

./: CMakeLists.txt  README.md  erro.txt  roadmap.txt
include/: AudioCapture.h  LoopbackCapture.h  MicCapture.h  Utils.h  WavWriter.h
src/: AudioCapture.cpp  LoopbackCapture.cpp  MicCapture.cpp  Utils.cpp  WavWriter.cpp  main.cpp
